--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
 body {
-  font-family: sans-serif;
+  font-family: "Inter", sans-serif;
   margin: 0 auto;
   max-width: 50em;
+}
+
+textarea {
+  font-family: "Inter", sans-serif;
 }
 
 .hero-greeting {
